arrumando_tamanho_entre_pags

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Meu portifolio</title>
 </head>
 <body>
-    <script>
-        let nome = prompt("Qual seu Nome?")
-        console.log(nome)
-    </script>
+      <!-- Proposta para aprender usar variaveis e alerts!
+        <script>
+            let nome = prompt("Qual seu Nome?")
+            console.log(nome)
+        </script>
+        -->
     
     <div class="container">
         
@@ -35,12 +37,14 @@
         <div class="conteudoindex">
 
             <div class="flex-cont" id="column_left">
+                <!-- Proposta para aprender usar variaveis e alerts!
                 <script>
                     if(nome != null){
                         document.write("<h1 class='textdiferent'>"+`Olá ${nome} ,`+"</h1>")
                     }else{
                         document.write("<h1 class='textdiferent'>"+`Olá Visitante ,`+"</h1>")
-                    }                  
+                    }--> 
+                    <h1 class='textdiferent'>Olá Visitante</h1>                 
                 </script>
 
                 <p class="textdestaque"> 
